# HW31_Django_validation_tests

./: README.md  pyproject.toml  pytest.ini
ads/: admin.py  models.py  permissions.py  serializers.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_selection.py
ads/urls/: cat_urls.py  selection_urls.py
avito/: settings.py  urls.py
data/: convert_to_json.py  user.csv  user.json  users.json
tests/: conftest.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py  selection_create_test.py
tests/factories/: ad.py
users/: models.py  serializers.py  urls.py  validators.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_remove_user_location_user_location.py  0004_remove_user_location_user_location.py
